--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -230,10 +230,11 @@ h6 {
 
 .header .logo {
   line-height: 1;
+  visibility: hidden;
 }
 
 .header .logo img {
-  max-height: 32px;
+  max-height: 100px;
   margin-right: 8px;
 }
 
@@ -246,6 +247,15 @@ h6 {
 
 .scrolled .header {
   box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
+}
+
+.header .logo .textlogo {
+  color: #ff9900;
+}
+
+.scrolled .header .logo {
+  
+  visibility: visible;
 }
 
 /* Global Header on Scroll
